hard-gists/3181989/run.log
=== Docker Run Log for 3181989 ===
Started at: Mi 29. Okt 13:44:03 CET 2025

[2025-10-29 13:44:04] START: Running container for 3181989
[2025-10-29 13:44:04] SUCCESS: Container 5fc7fd4a24b1575e36c71756c1d557956e742451119195771dc09283027ff544 started for 3181989
=== Container logs for 3181989 ===
  File "/snippet.py", line 37
    print distinguish_captcha(url)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3181989 ===
[2025-10-29 13:44:06] INFO: Container 5fc7fd4a24b1575e36c71756c1d557956e742451119195771dc09283027ff544 has stopped
